style: fix z-index

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -71,8 +71,6 @@ img[lazy=loaded]
     display: none
 
 // GENERAL
-.button, button, a, .hovered
-  cursor: pointer
 main, input, .button, button, svg, a
   cursor: none
 
